--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,18 +128,15 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* Firefox */
 input[type="number"] {
   appearance: textfield;
   -moz-appearance: textfield;
 }
 
-/* Hide clear icon in Chrome, Edge */
 input[type="search"]::-webkit-search-cancel-button {
   display: none;
 }
 
-/* Optional: For Firefox, though it doesn't usually show a cancel icon */
 input[type="search"]::-moz-search-clear {
   display: none;
 }
@@ -147,4 +144,22 @@ textarea {
   -webkit-appearance: none;
   appearance: none;
   resize: none;
+}
+.custom-scroll::-webkit-scrollbar {
+  height: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #d1d5db;
+  border-radius: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: #f3f4f6;
+}
+
+/* Firefox support */
+.custom-scroll {
+  scrollbar-color: #d1d5db #f3f4f6;
+  scrollbar-width: thin;
 }
